--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
         <p>Testing this website out! Currently it is purely HTML.</p>
         <p>I love cars, elevators, and transit.</p>
-
+        <br>
         <p>Just for fun, here is a Texas Instruments TI-81 and TI-84 Plus CE side by side. They are ~30 years apart!</p>
-        <img src="calculator.jpg" alt="TI-81 and TI-84 Plus CE side by side">
+        <img src="calculator.jpg" alt="TI-81 and TI-84 Plus CE side by side" max-width=100% height=auto>
 
         <hr>
         <a href = "mailto: contact@lukaschiu.com">Contact me &#40email&#41</a>
