--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="The personal website for Lukas Chiu.">
         <title>Homepage | Lukas Chiu</title>
+        <link rel="icon" type="image/png" href="favicon.png">
     </head>
 
     <body style="background-color:Khaki;">
