Update to main page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +8,18 @@
         <link rel="icon" type="image/png" href="favicon.png">
     </head>
 
-    <body style="background-color:Khaki;">
+    <body>
+        <!--Header-->
         <h1>Welcome to the website of Lukas Chiu!</h1>
         <hr>
 
-        <p>Testing this website out! Currently it is purely HTML.</p>
-        <p>I love cars, elevators, and transit.</p>
+        <!--Content-->
+        <p>Testing this website out!</p>
         <br>
         <p>Just for fun, here is a Texas Instruments TI-81 and TI-84 Plus CE side by side. They are ~30 years apart!</p>
-        <img src="calculator.jpg" alt="TI-81 and TI-84 Plus CE side by side" width="400" height="auto">
+        <img src="calculator.jpg" alt="TI-81 and TI-84 Plus CE side by side" width="350" height="auto">
 
+        <!--Footer-->
         <hr>
         <a href = "mailto: contact@lukaschiu.com">Contact me &#40email&#41</a>
     </body>
