--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/png" href="favicon.png">
     </head>
 
-    <body>
+    <body style="background-color: wheat;">
         <!--Header-->
         <h1>Welcome to the website of Lukas Chiu!</h1>
         <hr>
