--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
 
     <body style="background-color: wheat;">
         <!--Header-->
-        <h1>Welcome to the website of Lukas Chiu!</h1>
+        <h1 id="top">Welcome to the website of Lukas Chiu!</h1>
         <hr>
 
         <!--Content-->
         <p>Testing this website out!</p>
-        <br>
         <p>Just for fun, here is a Texas Instruments TI-81 and TI-84 Plus CE side by side. They are ~30 years apart!</p>
+        <a href="calculator.jpd" target="_parent">
         <img src="calculator.jpg" alt="TI-81 and TI-84 Plus CE side by side" width="350" height="auto">
+        </a>
 
         <!--Footer-->
         <hr>
-        <a href = "mailto: contact@lukaschiu.com">Contact me &#40email&#41</a>
+        <a href = "mailto: contact@lukaschiu.com">Contact me (email)</a>
+        <p>Last Updated: December 14th, 2023</p>
+        <h5><a href="#top">Jump to the top of the page</a></h5>
     </body>
 </html>
