--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--Content-->
         <p>Testing this website out!</p>
         <p>Just for fun, here is a Texas Instruments TI-81 and TI-84 Plus CE side by side. They are ~30 years apart!</p>
-        <a href="calculator.jpd" target="_parent">
+        <a href="calculator.jpg" target="_parent">
         <img src="calculator.jpg" alt="TI-81 and TI-84 Plus CE side by side" width="350" height="auto">
         </a>
 
