--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
         <!--Content-->
         <p>Testing this website out!</p>
         <p>Just for fun, here is a Texas Instruments TI-81 and TI-84 Plus CE side by side. They are ~30 years apart!</p>
-        <a href="calculator.jpg" target="_parent">
+        <a href="calculator.jpg" target="_blank">
         <img src="calculator.jpg" alt="TI-81 and TI-84 Plus CE side by side" width="350" height="auto">
         </a>
+        <button onclick="document.location='testpage.html'">Testing!</button>
 
         <!--Footer-->
         <hr>
         <a href = "mailto: contact@lukaschiu.com">Contact me (email)</a>
-        <p>Last Updated: December 14th, 2023</p>
+        <p>Last Updated: December 30th, 2023</p>
         <h5><a href="#top">Jump to the top of the page</a></h5>
     </body>
 </html>
