--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="calculator.jpg" alt="TI-81 and TI-84 Plus CE side by side" width="350" height="auto">
         </a>
         <br>
-        <button onclick="document.location='testpage.html'">Testing!</button>
+        <button onclick="document.location='pages/testpage.html'">Testing!</button>
 
         <!--Footer-->
         <hr>
