--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <!--Content-->
         <p>Testing this website out!</p>
         <p>Just for fun, here is a Texas Instruments TI-81 and TI-84 Plus CE side by side. They are ~30 years apart!</p>
-        <a href="calculator.jpg" target="_blank">
-        <img src="calculator.jpg" alt="TI-81 and TI-84 Plus CE side by side" width="350" height="auto">
+        <a href="images/calculator.jpg" target="_blank">
+        <img src="images/calculator.jpg" alt="TI-81 and TI-84 Plus CE side by side" width="350" height="auto">
         </a>
         <br>
         <button onclick="document.location='pages/testpage.html'">Testing!</button>
