--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <hr>
 
         <!--Content-->
-        <p>Testing this website out!</p>
+        <p>I will get this website up and running one day...</p>
         <p>Just for fun, here is a Texas Instruments TI-81 and TI-84 Plus CE side by side. They are ~30 years apart!</p>
         <a href="images/calculator.jpg" target="_blank">
         <img src="images/calculator.jpg" alt="TI-81 and TI-84 Plus CE side by side" width="350" height="auto">
@@ -25,7 +25,7 @@
         <!--Footer-->
         <hr>
         <a href = "mailto: contact@lukaschiu.com">Contact me (email)</a>
-        <p>Last Updated: December 30th, 2023</p>
+        <!-- <p>Last Updated: December 30th, 2023</p> -->
         <h5><a href="#top">Jump to the top of the page</a></h5>
     </body>
 </html>
