--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--Footer-->
         <hr>
         <a href = "mailto: contact@lukaschiu.com">Contact me (email)</a>
-        <!-- <p>Last Updated: December 30th, 2023</p> -->
+        <p>Last Updated: December 30th, 2023</p>
         <h5><a href="#top">Jump to the top of the page</a></h5>
     </body>
 </html>
